--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,4 +46,17 @@ body {
 
 .section-header {
   color: var(--tg-theme-section-header-text-color);
+}
+
+.wrong-place {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.5rem;
+  text-align: center;
+  padding: 2rem;
+  background-color: var(--tg-theme-bg-color);
+  color: var(--tg-theme-text-color);
 } 
